
[tool.poetry]
name = "homeassistant-saures"
version = "0.1.0"
description = "Home Assistant SAURES platform integration"
authors = ["Yury Sokov <yurzs@yurzs.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
saures-api-client = "^0.1"

[tool.poetry.dev-dependencies]
homeassistant = { git = "https://github.com/home-assistant/core.git" }
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.black]
line_length = 100
target_versions = "^3.9"
